<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/txt_done"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_amountToBeReceived"
                android:textColor="@color/colorGray72"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_amountToBeReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="6000"
                android:textColor="@color/colorGray19" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_amountTransfered"
                android:textColor="@color/colorGray72"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_amountTransferred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="6000"
                android:textColor="@color/colorGray19" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_receiver"
                android:textColor="@color/colorGray72"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="6000"
                android:textColor="@color/colorGray19" />

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>